--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
         </div>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
+      <img src="" class="img-fluid" alt="">
     </div>
   </section>
 
@@ -93,7 +93,7 @@
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
+      <img src="" class="img-fluid" alt="">
     </div>
   </section>
 
@@ -104,7 +104,7 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead.jpg" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="" alt="">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
@@ -117,7 +117,7 @@
       <!-- Project One Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+          <img class="img-fluid" src="img/" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
@@ -135,7 +135,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+          <img class="img-fluid" src=" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
@@ -151,7 +151,7 @@
       </div>
          <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+          <img class="img-fluid" src="" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
@@ -169,7 +169,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+          <img class="img-fluid" src="" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
@@ -193,7 +193,7 @@
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
       </div>
-      <img src="img/ipad.png" class="img-fluid" alt="">
+      <img src="" class="img-fluid" alt="">
     </div>
   </section>
 
@@ -204,12 +204,12 @@
         <div class="col-md-10 col-lg-8 mx-auto text-center">
 
           <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-          <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+          <h2 class="text-white mb-5">references?</h2>
 
-          <form class="form-inline d-flex">
+          <!--<form class="form-inline d-flex">
             <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
             <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
-          </form>
+          </form>-->
 
         </div>
       </div>
@@ -233,7 +233,7 @@
           </div>
         </div>
 
-        <div class="col-md-4 mb-3 mb-md-0">
+        <!-- <div class="col-md-4 mb-3 mb-md-0">
           <div class="card py-4 h-100">
             <div class="card-body text-center">
               <i class="fas fa-envelope text-primary mb-2"></i>
@@ -270,7 +270,7 @@
         </a>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
