--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           </div>
         </div>
       </div>
-
+		-->
       <div class="social d-flex justify-content-center">
         <a href="#" class="mx-2">
           <i class="fab fa-twitter"></i>
@@ -270,7 +270,7 @@
         </a>
       </div>
     </div>
-  </section> -->
+  </section> 
 
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
