--- a/index.html
+++ b/index.html
@@ -101,22 +101,7 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/Turntable.mp4" title="title1">
-              <video width=100% height=100% playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-                <source src="img/Turntable.mp4" type="video/mp4">
-              </video>
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Let me know if you want this to be less or more transparent.
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg" title="title2">
+          <a class="portfolio-box popup-youtube" href="http://www.youtube.com/watch?v=7HKoqNJtMTQ" title="title">
             <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
@@ -380,8 +365,9 @@
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  
 
   <!-- Custom scripts for this template -->
   <script src="js/creative.min.js"></script>
