--- a/index.html
+++ b/index.html
@@ -98,21 +98,9 @@
 
 <!-- Portfolio Section -->
   <section id="portfolio">
+    <h2 class="text-white display-3 text-center display-5" style="padding-bottom: 30px;padding-top: 15px;">MY PORTFOLIO</h2>
     <div class="container-fluid p-0">
       <div class="row no-gutters">
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box popup-youtube" href="http://www.youtube.com/watch?v=7HKoqNJtMTQ" title="title">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg" title="title1">
             <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
@@ -167,7 +155,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title1">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -178,9 +166,9 @@
             </div>
           </a>
         </div>
-                <div class="col-lg-4 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title1">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
+            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -269,61 +257,90 @@
             </div>
           </a>
         </div>
-      </div>
-    </div>
   </section>
+
+<section id="portfolio2">
+    <h2 class="text-white display-3 text-center display-5" style="padding-bottom: 30px;padding-top: 15px;">Videos</h2><div class="container-fluid p-0">
+    <center class="row no-gutters">
+      <div class="col-sm-6 mb-6">
+        <a class="portfolio-box popup-youtube" href="http://www.youtube.com/watch?v=7HKoqNJtMTQ" title="title">
+            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+            <div class="portfolio-box-caption" style="width: 100%; height: 100%">
+              <div class="project-category text-white-50">
+                Category
+              </div>
+              <div class="project-name">
+                Project Name
+              </div>
+            </div>
+          </a>
+        </div>
+      <div class="col-sm-6 mb-6">
+        <a class="portfolio-box popup-youtube" href="http://www.youtube.com/watch?v=7HKoqNJtMTQ" title="title2">
+            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+            <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                Category
+              </div>
+              <div class="project-name">
+                Project Name
+              </div>
+            </div>
+          </a>
+        </div>
+      </center>
+</section>
 
 <!-- Reference Section -->
 <section id="signup" class="signup-section bg-black">
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 mx-auto">
-          <h2 class="text-white display-3 text-center display-5" style="padding-bottom: 15px;">REFERENCES</h2>
-          <a href="https://www.instagram.com/rehanjaym/" class="mx-6" target="_blank">
+      <center class="col-lg-8 mx-auto" style="padding-top: : 20px">
+          <h2 class="text-white display-3 text-center display-5" style="padding-bottom: 10px;">REFERENCES</h2>
+          <a href="https://www.instagram.com/rehanjaym/"class="mx-1" target="_blank">
+            <i class="far fa-file-pdf fa-lg"></i>
+          </a>
+          <a href="https://www.facebook.com/rehanjaym" class="mx-1" target="_blank">
             <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <a href="https://www.facebook.com/rehanjaym" class="mx-6" target="_blank">
+          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
             <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-6" target="_blank">
+          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
             <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-6" target="_blank">
+          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
             <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-6" target="_blank">
+          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
             <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-6" target="_blank">
+          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
+            <i class="far fa-file-pdf fa-4x"></i>
+          </a><br>
+          <a href="https://www.instagram.com/rehanjaym/" class="mx-1" target="_blank" >
             <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-6" target="_blank">
+          <a href="https://www.facebook.com/rehanjaym" class="mx-1" target="_blank">
             <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <p style="padding-bottom: 20px"> </p>
-          <a href="https://www.instagram.com/rehanjaym/" class="mx-6" target="_blank" >
+          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
             <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <a href="https://www.facebook.com/rehanjaym" class="mx-6" target="_blank">
+          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
             <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-6" target="_blank">
+          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
             <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-6" target="_blank">
+          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
             <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-6" target="_blank">
-            <i class="far fa-file-pdf fa-4x"></i>
-          </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-6" target="_blank">
-            <i class="far fa-file-pdf fa-4x"></i>
-          </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-6" target="_blank">
+          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
             <i class="far fa-file-pdf fa-4x"></i>
           </a>
           <p style="padding-bottom: 30px"> </p>
-      </div>
+      </center>
     </div>
   </div>
 </section> 
