--- a/index.html
+++ b/index.html
@@ -180,125 +180,106 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title1">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
+            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
+              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
+              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
+            </a>
+          </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title1">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
+            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
+              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
+              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
+            </a>
+          </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title1">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
+            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
+              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
+              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
+            </a>
+          </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title1">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
+            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
+              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
+            </a>
+          </div>
+          <div class="col-lg-4 col-sm-6">
+            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
+              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
+            </a>
+          </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title1">
+          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title1">
+          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
           </a>
         </div>
   </section>
 
 <section id="portfolio2">
-    <h2 class="text-white display-3 text-center display-5" style="padding-bottom: 30px;padding-top: 15px;">Videos</h2><div class="container-fluid p-0">
-    <center class="row no-gutters">
-      <div class="col-sm-6 mb-6">
-        <a class="portfolio-box popup-youtube" href="http://www.youtube.com/watch?v=7HKoqNJtMTQ" title="title">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-            <div class="portfolio-box-caption" style="width: 100%; height: 100%">
-              <div class="project-category text-white-50">
-                Category
+    <h2 class="text-white display-3 text-center display-5" style="padding-bottom: 30px;padding-top: 15px;">Videos</h2>
+    <div class="container-fluid p-0">
+      <div class="row justify-content-center no-gutters">
+        <div class="col-4">
+          <a class="portfolio-box popup-youtube" href="http://www.youtube.com/watch?v=7HKoqNJtMTQ" title="title2">
+              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+              <div class="portfolio-box-caption">
+                <div class="project-category text-white-50">
+                  Category
+                </div>
+                <div class="project-name">
+                  Project Name
+                </div>
               </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
+            </a>
         </div>
-      <div class="col-sm-6 mb-6">
-        <a class="portfolio-box popup-youtube" href="http://www.youtube.com/watch?v=7HKoqNJtMTQ" title="title2">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
+        <div class="col-4">
+          <a class="portfolio-box popup-youtube" href="http://www.youtube.com/watch?v=7HKoqNJtMTQ" title="title2">
+              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+              <div class="portfolio-box-caption">
+                <div class="project-category text-white-50">
+                  Category
+                </div>
+                <div class="project-name">
+                  Project Name
+                </div>
               </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-      </center>
+            </a>
+          </div>
+      </div>
 </section>
 
 <!-- Reference Section -->
 <section id="signup" class="signup-section bg-black">
   <div class="container">
-    <div class="row">
+    <div class="row-no">
       <center class="col-lg-8 mx-auto" style="padding-top: : 20px">
           <h2 class="text-white display-3 text-center display-5" style="padding-bottom: 10px;">REFERENCES</h2>
-          <a href="https://www.instagram.com/rehanjaym/"class="mx-1" target="_blank">
-            <i class="far fa-file-pdf fa-lg"></i>
+          <a href=examplefile.pdf" download "class="mx-1" target="_blank">
+            <i class="far fa-file-pdf fa-lg"></i>Link text
           </a>
           <a href="https://www.facebook.com/rehanjaym" class="mx-1" target="_blank">
             <i class="far fa-file-pdf fa-4x"></i>
