--- a/index.html
+++ b/index.html
@@ -215,28 +215,6 @@
           </div>
           </a>
         </div>
-        <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
-            </a>
-          </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
-            </a>
-          </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
-          </a>
-        </div>
   </section>
 
 <section id="portfolio2">
@@ -274,56 +252,59 @@
 
 <!-- Reference Section -->
 <section id="signup" class="signup-section bg-black">
-  <div class="container">
-    <div class="row-no">
-      <center class="col-lg-8 mx-auto" style="padding-top: : 20px">
-          <h2 class="text-white display-3 text-center display-5" style="padding-bottom: 10px;">REFERENCES</h2>
-          <a href=examplefile.pdf" download "class="mx-1" target="_blank">
-            <i class="far fa-file-pdf fa-lg"></i>Link text
+  <div class="container" style="padding-top: : 20px">
+  <h2 class="text-white display-3 text-center display-5 col-xl text-center" style="padding-bottom: 10px;">REFERENCES</h2>
+  
+    <div class="row" >
+        <div class="col-md-3 text-center">
+          <a href="img/pdf/1.jpeg" download class="text-white-50 mb-6" target="_blank">
+            <img src="img/thumb1.png"><br>GEMS Modern Academy
           </a>
-          <a href="https://www.facebook.com/rehanjaym" class="mx-1" target="_blank">
-            <i class="far fa-file-pdf fa-4x"></i>
+        </div>
+        <div class="col-md-3 text-center">
+          <a href="img/pdf/2.jpeg" download class="text-white-50 mb-6" target="_blank">
+            <img src="img/thumb1.png"><br>GEMS Modern Academy
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
-            <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
-            <i class="far fa-file-pdf fa-4x"></i>
+        </div>
+        <div class="col-md-3 text-center">
+          <a href="img/pdf/3.jpeg" download class="text-white-50 mb-6" target="_blank">
+            <img src="img/thumb1.png"><br>GEMS Modern Academy
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
-            <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
-            <i class="far fa-file-pdf fa-4x"></i>
+        </div>
+        <div class="col-md-3 text-center">
+          <a href="img/pdf/4.jpeg" download class="text-white-50 mb-6" target="_blank">
+            <img src="img/thumb1.png"><br>GEMS Modern Academy
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
-            <i class="far fa-file-pdf fa-4x"></i>
-          </a><br>
-          <a href="https://www.instagram.com/rehanjaym/" class="mx-1" target="_blank" >
-            <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <a href="https://www.facebook.com/rehanjaym" class="mx-1" target="_blank">
-            <i class="far fa-file-pdf fa-4x"></i>
+        </div>
+      </div>
+  <p style="padding-bottom: 30px"> </p>
+  <div class="row">
+        <div class="col-md-3 text-center ">
+          <a href="img/pdf/5.jpeg" download class="text-white-50 mb-6" target="_blank">
+            <img src="img/thumb1.png"><br>GEMS Modern Academy
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
-            <i class="far fa-file-pdf fa-4x"></i>
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
-            <i class="far fa-file-pdf fa-4x"></i>
+        </div>
+        <div class="col-md-3 text-center ">
+          <a href="img/pdf/tfss.pdf" download class="text-white-50 mb-6" target="_blank">
+            <img src="img/thumb2.png"><br>Turner Fenton Secondary School
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
-            <i class="far fa-file-pdf fa-4x"></i>
+        </div>
+        <div class="col-md-3 text-center ">
+          <a href="img/pdf/berklee1.pdf" download class="text-white-50 mb-6" target="_blank">
+            <img src="img/thumb3.png"><br>Berklee College of Music
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
-            <i class="far fa-file-pdf fa-4x"></i>
+        </div>
+        <div class="col-md-3 text-center ">
+          <a href="img/pdf/berklee2.pdf" download class="text-white-50 mb-6" target="_blank">
+            <img src="img/thumb3.png"><br>Berklee College of Music
           </a>
-          <a href="http://linkedin.com/in/rehanjaym/" class="mx-1" target="_blank">
-            <i class="far fa-file-pdf fa-4x"></i>
-          </a>
-          <p style="padding-bottom: 30px"> </p>
-      </center>
+        </div>
+      </div>
     </div>
-  </div>
 </section> 
 
 <!-- Contact Section -->
