Final missing fonts

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Custom fonts for this template -->
+  <!-- Custom fonts -->
+
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -22,7 +23,7 @@
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
   <!-- Theme CSS - Includes Bootstrap -->
-  <!-- Custom styles for this template -->
+  <!-- Custom styles -->
   <link href="css/grayscale.min.css" rel="stylesheet">
 
     <!-- Plugin CSS -->
@@ -35,7 +36,8 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">What do you want here? or do u want nothing</a>
+      <!-- For <a> tag below if you want this as a button class="navbar-brand js-scroll-trigger" href="#page-top"-->
+      <a class="navbar-brand">Rehan Jay Manickam</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -49,13 +51,13 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#projects">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#references">References</a>
+            <a class="nav-link js-scroll-trigger" href="#signup">References</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -85,9 +87,16 @@
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white display-5">ABOUT ME</h2>
-          <p class="text-white-50 mb-6">text that needs to be inputted --> mb6 --> if the spacing needs to be changed at the end of it all lmk</p>
-          <p class="text-white-50 mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis nulla maximus, dignissim nisl a, bibendum odio. Suspendisse id lobortis velit, gravida aliquet sapien. Proin et nulla lectus. Mauris tempor hendrerit laoreet. Nunc ac commodo mauris. Vestibulum eu ex at lacus efficitur mattis. Ut et tincidunt orci. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent quis dolor sed orci viverra euismod. Quisque egestas felis nulla, et pulvinar nisl rhoncus ut. Sed gravida luctus eros volutpat fermentum. In iaculis arcu vel mollis iaculis.Quisque sed dui at augue dignissim commodo. Sed sed mattis lectus. Nunc nec tortor non elit feugiat bibendum non ac enim. Nam placerat rutrum orci, nec rhoncus nibh faucibus ut. Morbi a neque in odio dictum euismod vel ac mauris. Suspendisse et nunc eu enim iaculis lacinia. Aliquam risus magna, interdum et aliquam a, luctus et sapien. Aliquam viverra sed tellus in cursus. Nunc sit amet erat semper, mattis odio quis, imperdiet nisi. Duis luctus, est sit amet dignissim consequat, augue est venenatis turpis, id mollis quam sem nec orci.Maecenas eleifend eleifend imperdiet. Maecenas ut pretium leo. Integer vehicula pharetra magna, vitae pretium elit accumsan nec. Suspendisse luctus eu libero hendrerit congue. Suspendisse rutrum mi lorem, in dictum sapien elementum sed. Pellentesque semper pulvinar urna, ut feugiat nibh auctor eu. In eu ultrices erat. Praesent sed mauris quis turpis lobortis molestie non malesuada libero. Nulla libero nunc, dignissim in efficitur eu, lobortis quis sapien.</p>
-          <p class="text-white mb-7">text that needs to be inputted</p>
+                    <p style="padding-bottom: 75px;"></p>
+          <p class="text-white mb-6">I am currently a second year undergraduate student at Berklee College of Music dual majoring in Music Production and Engineering & Music Business Management.</p>
+
+          <p class="text-white mb-6">My mission is to acquire and develop core skills required to not only succeed in the industry to excel at what I do come 2021.
+
+          <p class="text-white mb-7"> With a focus on fostering a sense of community among artists in the industry and revolutionizing aspects of the performing arts, my experiences, projects, and involvement within the community are at the core of my vision and mission here at Berklee.</p>
+
+          <p class="text-white mb-7">I am currently involved with multiple organizations within the USA, Canada, UAE and Spain. Feel free to brows through my portfolio for more specifics.</p>
+         
+          <p style="padding-bottom: 100px;"></p>
       </div>
       <div class="col-md-10 mx-auto">
         <h2 class="text-white mb-0">"STRIVE NOT TO BE A SUCCESS, BUT TO BE OF VALUE."</h2>
@@ -102,8 +111,8 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg" title="title1">
-            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/MPTI2.jpg" title="title1">
+            <img class="img-fluid" src="img/portfolio/thumbnails/MPTI2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -115,8 +124,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title1">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/Ambass.jpeg" title="title1">
+            <img class="img-fluid" src="img/portfolio/thumbnails/Ambass.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -128,8 +137,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg" title="title1">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/VeleseVents.jpeg" title="title1">
+            <img class="img-fluid" src="img/portfolio/thumbnails/VeleseVents.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -141,8 +150,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg" title="title1">
-            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/Bridgingthegap.jpg" title="title1">
+            <img class="img-fluid" src="img/portfolio/thumbnails/Bridgingthegap.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -154,8 +163,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title1">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/gospelensemble.jpg" title="title1">
+            <img class="img-fluid" src="img/portfolio/thumbnails/gospelensemble.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -167,8 +176,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title1">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/madrid.jpg" title="title1">
+            <img class="img-fluid" src="img/portfolio/thumbnails/madrid.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
                 Category
@@ -180,36 +189,36 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
+            <a class="portfolio-box" href="img/portfolio/fullsize/BerkleeBlog.png" title="title3">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
+            <a class="portfolio-box" href="img/portfolio/fullsize/BostonCalling.png" title="title3">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
             </a>
           </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
+            <a class="portfolio-box" href="img/portfolio/fullsize/BVCEL.jpg" title="title3">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
+            <a class="portfolio-box" href="img/portfolio/fullsize/DeansList.png" title="title3">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
             </a>
           </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
+            <a class="portfolio-box" href="img/portfolio/fullsize/LawandManagement.jpg" title="title3">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg" title="title3">
+            <a class="portfolio-box" href="img/portfolio/fullsize/StudentAdvisoryBoard.png" title="title3">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
             </a>
           </div>
@@ -222,7 +231,7 @@
     <div class="container-fluid p-0">
       <div class="row justify-content-center no-gutters">
         <div class="col-4">
-          <a class="portfolio-box popup-youtube" href="http://www.youtube.com/watch?v=7HKoqNJtMTQ" title="title2">
+          <a class="portfolio-box popup-youtube" href="https://www.youtube.com/watch?v=5m5vRz4gfYA" title="title2">
               <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="project-category text-white-50">
@@ -235,7 +244,7 @@
             </a>
         </div>
         <div class="col-4">
-          <a class="portfolio-box popup-youtube" href="http://www.youtube.com/watch?v=7HKoqNJtMTQ" title="title2">
+          <a class="portfolio-box popup-youtube" href="https://www.youtube.com/watch?v=QDxI1L-Y8-Q" title="title2">
               <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="project-category text-white-50">
@@ -289,17 +298,17 @@
           </a>
         </div>
         <div class="col-md-3 text-center ">
-          <a href="img/pdf/tfss.pdf" download class="text-white-50 mb-6" target="_blank">
+          <a href="img/pdf/tfssreference.pdf" download class="text-white-50 mb-6" target="_blank">
             <img src="img/thumb2.png"><br>Turner Fenton Secondary School
           </a>
         </div>
         <div class="col-md-3 text-center ">
-          <a href="img/pdf/berklee1.pdf" download class="text-white-50 mb-6" target="_blank">
+          <a href="img/pdf/BerkleeScholarships.pdf" download class="text-white-50 mb-6" target="_blank">
             <img src="img/thumb3.png"><br>Berklee College of Music
           </a>
         </div>
         <div class="col-md-3 text-center ">
-          <a href="img/pdf/berklee2.pdf" download class="text-white-50 mb-6" target="_blank">
+          <a href="img/pdf/BerkleeLetter.pdf" download class="text-white-50 mb-6" target="_blank">
             <img src="img/thumb3.png"><br>Berklee College of Music
           </a>
         </div>
@@ -308,7 +317,7 @@
 </section> 
 
 <!-- Contact Section -->
-  <section class="contact-section bg-black">
+  <section id="contact" class="contact-section bg-black">
       <div class="social d-flex justify-content-center">
         <a href="https://www.instagram.com/rehanjaym/" class="mx-2" target="_blank">
           <i class="fab fa-instagram"></i>
