--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts -->
-
+  <link href="//db.onlinewebfonts.com/c/1e6ec96c95301fa73aa1d026f161a269?family=Marzo+W00+Regular" rel="stylesheet" type="text/css"/>
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -73,7 +73,7 @@
   <div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
-        <h1 class="display-3">REHAN JAY MANICKAM</h1>
+        <h1 class="display-3">REHAN JAY<br> MANICKAM</h1>
         <p class="lead mb-0">Pianist. Producer. Engineer.</p>
         <p class="lead mb-0">Marketing Strategist. Brand Manager.</p>
       </div>
@@ -107,7 +107,7 @@
 
 <!-- Portfolio Section -->
   <section id="portfolio">
-    <h2 class="text-white display-3 text-center display-5" style="padding-bottom: 30px;padding-top: 15px;">MY PORTFOLIO</h2>
+    <h2 class="text-white text-center display-5" style="padding-bottom: 30px;padding-top: 15px;">MY PORTFOLIO</h2>
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
@@ -227,7 +227,7 @@
   </section>
 
 <section id="portfolio2">
-    <h2 class="text-white display-3 text-center display-5" style="padding-bottom: 30px;padding-top: 15px;">Videos</h2>
+    <h2 class="text-white text-center display-5" style="padding-bottom: 30px;padding-top: 15px;">Videos</h2>
     <div class="container-fluid p-0">
       <div class="row justify-content-center no-gutters">
         <div class="col-4">
@@ -262,7 +262,7 @@
 <!-- Reference Section -->
 <section id="signup" class="signup-section bg-black">
   <div class="container" style="padding-top: : 20px">
-  <h2 class="text-white display-3 text-center display-5 col-xl text-center" style="padding-bottom: 10px;">REFERENCES</h2>
+  <h2 class="text-white display-5 text-center display-5 col-xl text-center" style="padding-bottom: 10px;">REFERENCES</h2>
   
     <div class="row" >
         <div class="col-md-3 text-center">
