--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Custom fonts -->
-  <link href="//db.onlinewebfonts.com/c/1e6ec96c95301fa73aa1d026f161a269?family=Marzo+W00+Regular" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -73,9 +73,9 @@
   <div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
-        <h1 class="display-3">REHAN JAY<br> MANICKAM</h1>
-        <p class="lead mb-0">Pianist. Producer. Engineer.</p>
-        <p class="lead mb-0">Marketing Strategist. Brand Manager.</p>
+        <h1 class="display-3 spfont">REHAN JAY<br> MANICKAM</h1>
+        <h4 class="lead mb-0">Pianist. Producer. Engineer.</h4>
+        <h4 class="lead mb-0">Marketing Strategist. Brand Manager.<h4">
       </div>
     </div>
   </div>
@@ -86,8 +86,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white display-5">ABOUT ME</h2>
-                    <p style="padding-bottom: 75px;"></p>
+          <h2 class="text-white display-5"  style="padding-top: 50px;">ABOUT ME</h2>
+                    <p style="padding-bottom: 50px;"></p>
           <p class="text-white mb-6">I am currently a second year undergraduate student at Berklee College of Music dual majoring in Music Production and Engineering & Music Business Management.</p>
 
           <p class="text-white mb-6">My mission is to acquire and develop core skills required to not only succeed in the industry to excel at what I do come 2021.
@@ -257,14 +257,15 @@
             </a>
           </div>
       </div>
+      <p style="padding-bottom: 20px;"></p>
 </section>
 
 <!-- Reference Section -->
 <section id="signup" class="signup-section bg-black">
   <div class="container" style="padding-top: : 20px">
-  <h2 class="text-white display-5 text-center display-5 col-xl text-center" style="padding-bottom: 10px;">REFERENCES</h2>
-  
-    <div class="row" >
+  <h2 class="text-white display-5 text-center display-5 col-xl text-center" style="padding-bottom: 150px;">REFERENCES</h2>
+  <div class="col-lg-8 mx-auto">
+    <div class="row">
         <div class="col-md-3 text-center">
           <a href="img/pdf/1.jpeg" download class="text-white-50 mb-6" target="_blank">
             <img src="img/thumb1.png"><br>GEMS Modern Academy
@@ -314,6 +315,7 @@
         </div>
       </div>
     </div>
+  </div>
 </section> 
 
 <!-- Contact Section -->
