--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
 
           <p class="text-white mb-7">I am currently involved with multiple organizations within the USA, Canada, UAE and Spain. Feel free to brows through my portfolio for more specifics.</p>
          
-          <p style="padding-bottom: 100px;"></p>
+          
       </div>
       <div class="col-md-10 mx-auto">
+        <p style="padding-bottom: 175px;"></p>
         <h2 class="text-white mb-0">"STRIVE NOT TO BE A SUCCESS, BUT TO BE OF VALUE."</h2>
         <p class="text-white mb-0">Albert Einstein</p>
       </div>
@@ -111,114 +112,116 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/MPTI2.jpg" title="title1">
+          <a class="portfolio-box" href="img/portfolio/fullsize/MPTI2.jpg" title="MPTI: Set-Up/Teardown, Session Set Up, Mixing / Recording Assistant, Develop, enhance and hone in on production and recording skills, over 60+ hours logged, only undergraduate student at Berklee Valencia to have achieved this, Project.">
             <img class="img-fluid" src="img/portfolio/thumbnails/MPTI2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                MPTI Assisting Recording Engineer
               </div>
               <div class="project-name">
-                Project Name
+                Fall 2018 / Spring 2019
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/Ambass.jpeg" title="title1">
+          <a class="portfolio-box" href="img/portfolio/fullsize/Ambass.jpeg" title="Exchange Ambassador Program: Assist Student Affairs with orientation for incoming students and students moving on to Boston: coordinate mentorship with academic ambassador program in Boston for First Year students, Project.">
             <img class="img-fluid" src="img/portfolio/thumbnails/Ambass.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Exchange Ambassador Program
               </div>
               <div class="project-name">
-                Project Name
+                Fall 2018 / Spring 2019
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/VeleseVents.jpeg" title="title1">
+          <a class="portfolio-box" href="img/portfolio/fullsize/VeleseVents.jpeg" title="Veles e Vents: Keys / Piano player for Middle Eastern / Flamenco Ensemble, Mixed Styles and Grooves, Contemporary Instrumental Gospel Ensemble, showcase skills and develop live performance skills in front of 200 people from the community, gig. 
+">
             <img class="img-fluid" src="img/portfolio/thumbnails/VeleseVents.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Veles e Vents
               </div>
               <div class="project-name">
-                Project Name
+                Fall 2018 and Spring 2019
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/Bridgingthegap.jpg" title="title1">
+          <a class="portfolio-box" href="img/portfolio/fullsize/Bridgingthegap.jpg" title="Bridging the Gap: Project Co-Lead, free and open platforms for students of various backgrounds to acquire studio skills, universal industry terminology and opportunities to network with the working professionals in the music industry, project. 
+">
             <img class="img-fluid" src="img/portfolio/thumbnails/Bridgingthegap.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Bridging the Gap
               </div>
               <div class="project-name">
-                Project Name
+                Berklee Valencia
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/gospelensemble.jpg" title="title1">
+          <a class="portfolio-box" href="img/portfolio/fullsize/gospelensemble.jpeg" title="Musaico Festival: External, Keys for Contemporary Instrumental Gospel Ensemble, develop skills for live performances and showcase these skills in front of 5000 people at a Berklee’ hosted and run festival, gig.">
             <img class="img-fluid" src="img/portfolio/thumbnails/gospelensemble.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Musaico Festival
               </div>
               <div class="project-name">
-                Project Name
+                Spring 2019
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/madrid.jpg" title="title1">
+          <a class="portfolio-box" href="img/portfolio/fullsize/madrid.jpg" title="Industry Day Trip: External, Student candidate, interact with companies such as Live Nation, Universal Spain to understand how the industry works in Europe, project candidate. Selection based on academic merit with the International Career Centre. ">
             <img class="img-fluid" src="img/portfolio/thumbnails/madrid.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Industry Day Trip
               </div>
               <div class="project-name">
-                Project Name
+                Valencia (Fall 2018) & Madrid (Spring 2019)
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/BerkleeBlog.png" title="title3">
+            <a class="portfolio-box" href="img/portfolio/fullsize/BerkleeBlog.png" title="Blog for Berklee, Spring 2019, Berklee Valencia, Writer, share my experience as a student here in Valencia reflecting on resources, opportunities and co-curricular live, project.">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/BostonCalling.png" title="title3">
+            <a class="portfolio-box" href="img/portfolio/fullsize/BostonCalling.png" title="Volunteer at Boston Calling, Summer 2019, Boston Calling Festival, External, Assist Production Teams, learn the workings of a live music festival inside out from operations to ticketing to marketing to riders to production with Live Nation, festival volunteer.">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
             </a>
           </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/BVCEL.jpg" title="title3">
+            <a class="portfolio-box" href="img/portfolio/fullsize/BVCEL.jpg" title="BVCEL Certification, Fall 2018, Berklee Valencia, Law and Management Valencia Board President, Educate, encourage and inspire undergrads and masters students about the Music Business and Legal aspects.">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/DeansList.png" title="title3">
+            <a class="portfolio-box" href="img/portfolio/fullsize/DeansList.png" title="Deans List, Fall 2017 Spring 2018 Fall 2018, Berklee Boston & Berklee Valencia, Student, Maintain excellent academic standing with balanced co-curricular endeavors, award.">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
             </a>
           </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/LawandManagement.jpg" title="title3">
+            <a class="portfolio-box" href="img/portfolio/fullsize/LawandManagement.jpg" title="BVCEL: #WomenInLaw chapter to empower and advocate for women in the industry related to the music business, award.">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
             </a>
           </div>
           <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/StudentAdvisoryBoard.png" title="title3">
+            <a class="portfolio-box" href="img/portfolio/fullsize/StudentAdvisoryBoard.png" title="Student Advisory Board, Fall 2018 / Spring 2019 <br> Study Abroad Representative, Address on campus issues regarding academics, extracurriculars and issues of diversity, equity and inclusion, Student Board.">
               <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" style="display: none;" alt="">
             </a>
           </div>
@@ -235,10 +238,10 @@
               <img class="img-fluid" src="img/portfolio/thumbnails/performance1.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="project-category text-white-50">
-                  Category
+                  Veles e Vents
                 </div>
                 <div class="project-name">
-                  Project Name
+                  More - Lawrence
                 </div>
               </div>
             </a>
@@ -248,10 +251,10 @@
               <img class="img-fluid" src="img/portfolio/thumbnails/performance2.jpg" alt="">
               <div class="portfolio-box-caption">
                 <div class="project-category text-white-50">
-                  Category
+                  Veles e Vents
                 </div>
                 <div class="project-name">
-                  Project Name
+                  Crazy Race - Roy Hargrove
                 </div>
               </div>
             </a>
